# bice

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Doxyfile  INSTALLATION.md  LICENSE  README.md  TODO.md  ideas.md  list_problems.sh  lve.py  noxfile.py  pyproject.toml  requirements.txt  setup.py  she.py
.github/: dependabot.yml
.github/workflows/: checks.yml  ci.yml  docs.yml  release.yml
bice/: __init__.py  bifurcations.py  chaos.py  constraints.py  continuation_steppers.py  equation.py  fem.py  linear_solver.py  problem.py  profiling.py  solution.py  solvers.py  time_steppers.py  timeperiodic.py
bice/continuation/: __init__.py  bifurcations.py  constraints.py  continuation_steppers.py  deflation.py  timeperiodic.py
bice/core/: __init__.py  equation.py  problem.py  profiling.py  solution.py  solvers.py  types.py
bice/deprecated/fem/: __init__.py  elements.py  fem.py
bice/fem/: fem.py  meshes.py
bice/measure/: __init__.py  drift.py  lyapunov.py
bice/pde/: __init__.py  collocation.py  fd_boundary_conditions.py  finite_differences.py  pde.py  pseudospectral.py
bice/time_steppers/: __init__.py  bdf.py  runge_kutta.py  time_steppers.py
demos/: .gitignore  lve.py  she.py
demos/CHE/: ch2d-pure.py  ch2d.py  ch2d_fd.py  che.py
demos/FEM/: FEM.py  TFE.py  TFE2d.py  elastic.py
demos/Heat/: heat.py
demos/LVE/: lve.py
demos/NE/: ne1d.py  ne1d_continuation.py  ne1d_lyapunov.py  ne2d.py  ne2d_fd.py  ne2d_fd_auto.py  ne2d_lyapunov.py
demos/SHE/: README.md  she.py  she_auto.py  she_biftracking.py  she_collocation.py  she_deflated.py  she_fd.py  she_ps.py
demos/TFE/: README.md  coat.py  coating.py  steady_tfe2d_fem.py  steady_tfe_fem.py  tfe.py  tfe_fd.py  tfe_fd_simulation.py  tfe_fem.py  tfe_fem_simulation.py  tfe_ps_simulation.py
demos/TFE/Coating/: coating_problem.py  continuation.py  hopf.py
demos/TFE/adaptive/: adaptive_problem.py  adiabatic.py  steady.py  stick-slip.py  volume_constraint.py
demos/TFE/substrates/: adaptive.py  elastic.py  two_field_volume_constraint.py  volume_constraint.py
demos/aPFC/: aPFC2d.py
demos/acPFC/: acPFC1d.py  acPFC1d_lyapunov.py  acPFC2d.py  acPFC_fd.py  acPFC_fd_v0loop.py  acPFC_v0loop.py  palma_acPFC1d.py  palma_acPFC1d_lyapunov.py  plot_spacetime.py
demos/adaptive_substrate/: adaptive.py  tfe_fd.py
demos/bratu-gelfand/: bratu.py
demos/elastic_substrate/: elastic.py
demos/notebooks/: heat_eq.ipynb  lve.ipynb  she.ipynb
demos/pitchfork/: pitchfork.py
demos/tobi/: tobi.py
doc/: Makefile  conf.py  index.rst  pypi-description.md  redoc.bash
docs/: .gitignore  Makefile  conf.py  index.rst  pypi-description.md
docs/architecture/: 01_introduction_and_goals.md  02_architecture_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  11_risks_and_technical_debt.md  12_glossary.md  index.md
docs/development/: coding_standards.md  documentation.md  getting_started.md  index.md  release_process.md  testing.md
notebooks/: heat_eq.ipynb
src/: __init__.py  demo_problems.py  linear_solver.py  problem.py  time_stepper.py
src/bice/: __init__.py
src/bice/continuation/: __init__.py  bifurcations.py  constraints.py  continuation_steppers.py  deflation.py  timeperiodic.py
src/bice/core/: __init__.py  equation.py  problem.py  profiling.py  solution.py  solvers.py  types.py
src/bice/demos/: .gitignore  __init__.py
src/bice/demos/CHE/: ch2d.py  ch2d_fd.py  che.py
src/bice/demos/Heat/: heat.py
src/bice/demos/LVE/: lve.py
src/bice/demos/NE/: ne1d.py  ne1d_continuation.py  ne1d_lyapunov.py  ne2d.py  ne2d_fd.py  ne2d_fd_auto.py  ne2d_lyapunov.py
src/bice/demos/SHE/: README.md  she.py  she_auto.py  she_fd.py  she_ps.py
src/bice/demos/TFE/: README.md  tfe_fd_simulation.py  tfe_ps_simulation.py
src/bice/demos/TFE/Coating/: coating_problem.py  continuation.py  hopf.py
src/bice/demos/TFE/adaptive/: adaptive_problem.py  adiabatic.py  steady.py  stick-slip.py  volume_constraint.py
src/bice/demos/TFE/substrates/: elastic.py  two_field_volume_constraint.py
src/bice/demos/acPFC/: acPFC1d.py  acPFC1d_lyapunov.py  acPFC2d.py  acPFC_fd.py  acPFC_fd_v0loop.py  acPFC_v0loop.py  palma_acPFC1d.py  palma_acPFC1d_lyapunov.py  plot_spacetime.py
src/bice/demos/bratu-gelfand/: bratu.py
src/bice/demos/notebooks/: heat_eq.ipynb  lve.ipynb  she.ipynb
src/bice/demos/pitchfork/: Snakefile  pitchfork.py
src/bice/measure/: __init__.py  lyapunov.py
src/bice/pde/: __init__.py  finite_differences.py  pde.py  pseudospectral.py
src/bice/time_steppers/: __init__.py  bdf.py  runge_kutta.py  time_steppers.py
tests/: __init__.py  test_she.py
tests/integration/: test_she.py
tests/unit/: test_continuation.py  test_equation.py  test_equation_group.py  test_problem.py  test_solution.py  test_solvers.py  test_time_steppers.py
