[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bice"
version = "0.4.0"
description = "Numerical continuation and bifurcation package"
readme = "doc/pypi-description.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "Simon Hartmann", email = "s.hartmann@wwu.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "findiff",
    "numdifftools",
]

[project.urls]
"Homepage" = "https://gitlab.com/simon123h/bice"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "mypy",
    "types-setuptools"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bice*"]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
