[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bice"
version = "0.4.0"
description = "Numerical continuation and bifurcation package"
readme = "docs/pypi-description.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Simon Hartmann", email = "s.hartmann@wwu.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.4.2",
    "scipy",
    "matplotlib",
    "findiff",
    "numdifftools",
]

[project.urls]
"Homepage" = "https://gitlab.com/simon123h/bice"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "nox",
    "types-setuptools",
    "myst-parser",
    "sphinxcontrib-mermaid",
    "sphinx",
    "sphinx-rtd-theme"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bice*"]

[tool.ruff]
# Same as Black.
line-length = 140
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Also enable:
# - I: isort
# - D: pydocstyle (docstrings)
# - UP: pyupgrade (modern Python upgrades)
# - NPY: NumPy-specific rules
select = ["E", "F", "I", "D", "UP", "NPY"]
ignore = [
    "E203", # Whitespace before ':'
    "D300", # Use triple double quotes
    "E402", # Module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"src/bice/demos/**" = ["D"]
"tests/**" = ["D"]
"docs/conf.py" = ["D100"]
"*.ipynb" = ["F403", "F405"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["bice"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
